2024-12-13  Ahmet Hakan Candar  <ahmethakan.candar@std.yeditepe.edu.tr>

    * src/functions.h (refera_get_variable): Implement function.
        (refera_set_variable): Implement function.
        (refera_sum, refera_aver, refera_diag, refera_print): Add stub declarations.

    * src/functions.c (refera_sum, refera_aver, refera_diag, refera_print): 
        Add stub function definitions.

    * src/operations.h: New file.
        (refera_operation_t): Define operation type.
        (R_ADD, R_SUB, R_MUL, R_DIV, R_INI, R_SET, R_CPY, R_EXC): Add operation type 
        macros for builtin statements.
        (R_SUM, R_AVG, R_DIA, R_PRI): Add operation type macros for builtin functions.

2024-12-12  Ahmet Hakan Candar  <ahmethakan.candar@std.yeditepe.edu.tr>

    * Simplify project due to scope limitation.
        - Remove refera_register_function()
        - Remove refera_register_builtins_function()
        - Remove refera_call_function()

2024-12-11  Ahmet Hakan Candar  <ahmethakan.candar@std.yeditepe.edu.tr>

    * Changed license from GPLv3 to LGPLv3.
    * Moved some functions and files around for better organization.
    * Added new prototype functions for global variables and function management:
        - refera_set_variable()
        - refera_get_variable()
        - refera_register_function()
        - refera_register_builtin_functions()
        - refera_call_function()
    * Updated `refera.h` with new function prototypes.
    * Updated the `Makefile` to reflect changes in file organization.
    * Minor modifications to `parser.c` and related files.

2024-12-11  Ahmet Hakan Candar  <ahmethakan.candar@std.yeditepe.edu.tr>

    * Initial project setup:
      - Created the base project structure with the following files:
        + `AUTHORS`: Added file to list the project authors.
        + `LICENSE`: Added file to specify the project license.
        + `README.md`: Added basic readme to describe the project.