@@ -5,6 +5,7 @@ CFLAGS ?= -Wall -Wextra
 
 # Directories
 SRC_DIR := src
+TEST_DIR := test
 INCLUDE_DIR := include
 OBJ_DIR := obj
 BIN_DIR := bin
@@ -14,6 +15,11 @@ LIB_DIR := lib
 SRCS := $(wildcard $(SRC_DIR)/*.c)
 OBJS := $(patsubst $(SRC_DIR)/%.c,$(OBJ_DIR)/%.o,$(SRCS))
 DEPS := $(wildcard $(INCLUDE_DIR)/*.h) $(wildcard $(SRC_DIR)/*.h)
+
+# Test Files
+TESTS := $(wildcard $(TEST_DIR)/*.c)
+TEST_OBJS := $(patsubst $(TEST_DIR)/%.c,$(OBJ_DIR)/%.o,$(TESTS))
+TEST_DEPS := $(wildcard $(INCLUDE_DIR)/*.h) $(wildcard $(TEST_DIR)/*.h)
 
 # OS environment
 ifeq ($(OS),Windows_NT)
@@ -37,15 +43,21 @@ INSTALL_HEADER_DIR := /usr/local/include
 EXEC := $(BIN_DIR)/$(TARGET_NAME)$(EXE_EXT)
 SLIB := $(LIB_DIR)/$(LIB_PRE)$(TARGET_NAME)$(LIB_EXT)
 ALIB := $(LIB_DIR)/$(LIB_PRE)$(TARGET_NAME).a
+TEST := $(BIN_DIR)/$(TARGET_NAME)_test$(EXE_EXT)
 
 # Source dirs
-VPATH := $(SRC_DIR):$(SRC_DIR)/repl
+VPATH := $(SRC_DIR):$(SRC_DIR)/repl:
 
 # Default target
 all: $(EXEC) $(SLIB)
 
 # Rule for creating object files
 $(OBJ_DIR)/%.o: %.c $(DEPS)
+	@mkdir -p $(@D)
+	$(CC) $(CFLAGS) -I$(INCLUDE_DIR) -c -fPIC $< -o $@
+
+# Rule for creating test object files
+$(OBJ_DIR)/%.o: $(TEST_DIR)/%.c $(DEPS) $(TEST_DEPS)
 	@mkdir -p $(@D)
 	$(CC) $(CFLAGS) -I$(INCLUDE_DIR) -c -fPIC $< -o $@
 
@@ -63,6 +75,11 @@ $(ALIB): $(OBJS)
 $(EXEC): $(OBJ_DIR)/repl.o $(ALIB)
 	@mkdir -p $(@D)
 	$(CC) $^ -o $@
+
+# Rule for creating test suite
+$(TEST): $(TEST_OBJS) $(ALIB)
+	@mkdir -p $(@D)
+	$(CC) $^ -o $@ -lcunit
 
 # Clean target
 clean:
@@ -82,5 +99,9 @@ uninstall:
 	rm -f $(INSTALL_DIR)/$(SLIB) $(INSTALL_DIR)/$(ALIB) $(INSTALL_DIR)/$(EXEC)
 	rm -f $(INSTALL_HEADER_DIR)/refera.h
 
+# Run test suite
+test: $(TEST)
+	./$(TEST)
+
 # Phony targets
-.PHONY: all clean run install uninstall
+.PHONY: all clean run install uninstall test
