@@ -1,0 +1,7 @@
+#ifndef TEST_H
+#define TEST_H
+
+#include <CUnit/Basic.h>
+#include <stdbool.h>
+
+#endif /* TEST_H */
