@@ -1,0 +1,16 @@
+#ifndef TEST_FUNCTIONS_H
+#define TEST_FUNCTIONS_H
+
+#include "test.h"
+
+void test_functions_sum();
+
+void test_functions_diag();
+
+void test_functions_aver();
+
+void test_functions_print();
+
+int test_functions_register(CU_pSuite);
+
+#endif /* TEST_FUNCTIONS_H */
